module(
    name = "envoy-api",
    version = "1.38.0-dev",
    repo_name = "envoy_api",
)

####################################################################################
# deps: Module
####################################################################################

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "boringssl", version = "0.20250514.0")
bazel_dep(name = "envoy_toolshed", version = "0.3.11")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "googleapis", version = "0.0.0-20251003-2193a2bf")
bazel_dep(name = "googleapis-cc", version = "1.0.0")
bazel_dep(name = "googleapis-go", version = "1.0.0")
bazel_dep(name = "googleapis-java", version = "1.0.0")
bazel_dep(name = "grpc", version = "1.76.0.bcr.1")
bazel_dep(name = "opentelemetry-proto", version = "1.8.0")
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
bazel_dep(name = "protoc-gen-validate", version = "1.3.0", repo_name = "com_envoyproxy_protoc_gen_validate")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_go", version = "0.59.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "xds", version = "0.0.0-20240423-555b57e")
bazel_dep(name = "yq.bzl", version = "0.1.1.envoy")
bazel_dep(name = "zipkin-api", version = "1.0.0")


####################################################################################
# deps: Dev
####################################################################################

bazel_dep(name = "googletest", version = "1.17.0", dev_dependency = True)


####################################################################################
# setup: Languages
####################################################################################

bazel_lib = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib.jq(version = "1.7")
bazel_lib.yq(version = "4.24.4")
use_repo(bazel_lib, "jq", "jq_toolchains", "yq", "yq_toolchains")

# Go SDK and toolchain configuration
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.6")
use_repo(
    go_sdk,
    "go_toolchains",
)

# Non-BCR dependencies extension
# These dependencies are not yet available in BCR or require custom build files
non_module_deps = use_extension("//bazel:extensions.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "com_github_chrusty_protoc_gen_jsonschema",
    "prometheus_metrics_model",
)

# Go dependencies extension
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "github.com/planetscale/vtprotobuf",
    sum = "h1:ujRGEVWJEoaxQ+8+HMl8YEpGaDAgohgZxJ5S+d2TTFQ=",
    version = "v0.6.1-0.20240409071808-615f978279ca",
)
go_deps.module(
    path = "google.golang.org/protobuf",
    sum = "h1:AYd7cD/uASjIL6Q9LiTjz8JLcrh/88q5UObnmY3aOOE=",
    version = "v1.36.10",
)
go_deps.module(
    path = "google.golang.org/genproto/googleapis/rpc",
    sum = "h1:OxYkA3wjPsZyBylwymxSHa7ViiW1Sml4ToBrncvFehI=",
    version = "v0.0.0-20250115164207-1a7da9e5054f",
)
go_deps.module(
    path = "google.golang.org/genproto/googleapis/api",
    sum = "h1:gap6+3Gk41EItBuyi4XX/bp4oqJ3UwuIMl25yGinuAA=",
    version = "v0.0.0-20250115164207-1a7da9e5054f",
)
go_deps.module(
    path = "github.com/golang/protobuf",
    sum = "h1:i7eJL8qZTpSEXOPTxNKhASYpMn+8e5Q6AdndVa1dWek=",
    version = "v1.5.4",
)
use_repo(
    go_deps,
    "com_github_golang_protobuf",
    "com_github_planetscale_vtprotobuf",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_protobuf",
)
