module(
    name = "envoy_mobile",
    version = "1.36.4-dev",
)

# All bazel_dep entries are organized alphabetically for improved readability.
bazel_dep(name = "abseil-cpp", version = "20250814.1", repo_name = "com_google_absl")
bazel_dep(name = "apple_support", version = "1.24.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "envoy", version = "1.36.4-dev")
bazel_dep(name = "envoy_api", version = "1.36.4-dev")
bazel_dep(name = "envoy_build_config", version = "1.36.4-dev")
bazel_dep(name = "googleapis", version = "0.0.0-20251003-2193a2bf", repo_name = "com_google_googleapis")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.1", repo_name = "com_google_protobuf")
bazel_dep(name = "protoc-gen-validate", version = "1.3.0", repo_name = "com_envoyproxy_protoc_gen_validate")
bazel_dep(name = "re2", version = "2024-07-02.bcr.1", repo_name = "com_googlesource_code_re2")
bazel_dep(name = "rules_android", version = "0.6.0")
bazel_dep(name = "rules_android_ndk", version = "0.1.2")
bazel_dep(name = "rules_apple", version = "4.1.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_detekt", version = "0.8.1.2")
bazel_dep(name = "rules_java", version = "9.0.3")
bazel_dep(name = "rules_jvm_external", version = "6.8")
bazel_dep(name = "rules_kotlin", version = "2.1.0")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0")
bazel_dep(name = "rules_swift", version = "2.4.0", repo_name = "build_bazel_rules_swift")

# Local module overrides
local_path_override(
    module_name = "envoy",
    path = "..",
)

local_path_override(
    module_name = "envoy_api",
    path = "../api",
)

local_path_override(
    module_name = "envoy_build_config",
    path = "envoy_build_config",
)

single_version_override(
    module_name = "rules_swift",
    version = "3.1.2",
)

# Envoy Mobile's non-module dependencies extension
# This extension loads dependencies specific to mobile that are not yet available as Bazel modules
mobile_deps = use_extension("//bazel:extensions.bzl", "envoy_mobile_dependencies")
use_repo(
    mobile_deps,
    # Mobile-specific dependencies not in BCR
    "com_github_libevent_libevent",  # Override for NDK compatibility
    # Swift tooling
    "DrString",
    "SwiftLint",
    "com_github_buildbuddy_io_rules_xcodeproj",
    "google_bazel_common",
    "xctestrunner",
)
