module(
    name = "envoy_build_config",
)

# All bazel_dep entries are organized alphabetically for improved readability.
bazel_dep(name = "envoy")
bazel_dep(name = "envoy_mobile")
bazel_dep(name = "platforms", version = "1.0.0")

# Local module overrides
local_path_override(
    module_name = "envoy",
    path = "../..",
)

local_path_override(
    module_name = "envoy_mobile",
    path = "..",
)

local_path_override(
    module_name = "envoy_api",
    path = "../../api",
)
