module(
    name = "envoy_build_config",
    version = "1.36.4-dev",
)

# All bazel_dep entries are organized alphabetically for improved readability.
bazel_dep(name = "envoy", version = "1.36.4-dev")
bazel_dep(name = "envoy_mobile", version = "1.36.4-dev")
bazel_dep(name = "platforms", version = "1.0.0")

# Local module overrides
local_path_override(
    module_name = "envoy",
    path = "../..",
)

local_path_override(
    module_name = "envoy_mobile",
    path = "..",
)

local_path_override(
    module_name = "envoy_api",
    path = "../../api",
)

single_version_override(
    module_name = "rules_swift",
    version = "3.1.2",
)
