module(
    name = "envoy_build_config",
    version = "1.37.0-dev",
)

bazel_dep(name = "envoy", version = "1.37.0-dev")
bazel_dep(name = "envoy_mobile", version = "1.37.0-dev")
bazel_dep(name = "platforms", version = "1.0.0")

local_path_override(
    module_name = "envoy",
    path = "../..",
)

local_path_override(
    module_name = "envoy_mobile",
    path = "..",
)
