[metadata]
name = protoc-gen-validate
version = env: SETUPTOOLS_SCM_PRETEND_VERSION
author = Buf
author_email = dev@buf.build
description = PGV for python via just-in-time code generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bufbuild/protoc-gen-validate
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
install_requires =
    validate-email>=1.3
    Jinja2>=2.11.1
    protobuf>=5.27.0
    astunparse>=1.6.3; python_version<"3.10"
python_requires = >=3.9

[options.data_files]
data = validate.proto

[flake8]
max-line-length = 120
ignore =
    F401
